<resources>
    <string name="app_name">TourLink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="home_page">消息</string>

    <string name="action_heart">Heart</string>
    <string name="action_info">Info</string>
    <string name="action_remove">Remove</string>
    <string name="action_check">Check</string>
    <string name="action_uncheck">Uncheck</string>
    <string name="action_color">Color</string>


    <string name="title">Single Title</string>
    <string name="title_long">A very interesting and long title</string>
    <string name="subtitle">Single Subtitle</string>
    <string name="subtitle_long">Lorem ipsum dolor sit amet, vide utamur usu ne. Debet nusquam est ut, omnium fabulas usu id, dolor dolore voluptua vis te.</string>

    <string name="attrs">Attributes</string>
    <string name="attr_title">Title</string>
    <string name="attr_subtitle">Subtitle</string>
    <string name="attr_multiline">Multiline</string>
    <string name="attr_forceKeyline">Force Keyline</string>
    <string name="attr_displayMode">Display Mode</string>
    <string name="attr_iconColor">Icon Color</string>
    <string name="attr_circularIconColor">Circular Icon Color</string>
    <string name="attr_actionMenu">Action Menu</string>
    <string name="attr_actionMenuRoom">Action Menu Room</string>
    <string name="attr_actionMenuItemColor">Action Menu Item Color</string>
    <string name="attr_actionMenuOverflowColor">Action Menu Overflow Color</string>

    <string name="attr_modeStandard">Standard</string>
    <string name="attr_modeIcon">Icon</string>
    <string name="attr_modeCircularIcon">Circular Icon</string>
    <string name="attr_modeAvatar">Avatar</string>

    <string name="attr_menuNone">None</string>
    <string name="attr_menuSingle">Single Action</string>
    <string name="attr_menuMultiple">Multiple Actions</string>

    <string name="attr_room1">1</string>
    <string name="attr_room2">2</string>
    <string name="attr_room3">3</string>
    <string name="menu_add_group">加入群组</string>
    <string name="menu_add_friend">添加好友</string>
    <string name="menu_rich_scan">扫一扫</string>
    <string name="menu_creat_group">新建群组</string>
    <string name="toolbar_title_circle">圈子</string>
    <string name="toolbar_title_my">个人信息</string>
    <string name="toolbar_title_funtion">功能</string>
    <string name="toolbar_title_group">群组</string>
    <string name="toolbar_title_msg">消息</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="demo_name_basemap">基础地图</string>

    <!--search-->
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="action_change_model">更改模式</string>
    <string name="action_setting_group">设置群组</string>
    <string name="title_activity_map_plus">MapPlusActivity</string>


</resources>
