<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_creat_group"
        android:orderInCategory="100"
        android:title="@string/menu_creat_group"
        app:showAsAction="never" />

    <item
        android:id="@id/action_add_group"
        android:orderInCategory="100"
        android:title="@string/menu_add_group"
        app:showAsAction="never" />

    <item
        android:id="@id/action_add_friend"
        android:orderInCategory="100"
        android:title="@string/menu_add_friend"
        app:showAsAction="never" />

    <item
        android:id="@id/action_rich_scan"
        android:orderInCategory="101"
        android:title="@string/menu_rich_scan"
        app:showAsAction="never" />



</menu>